Conteudos de Bootstrap e JS

--- a/29 - BooststrapRecusosBasicos/botoes.html
+++ b/29 - BooststrapRecusosBasicos/botoes.html
@@ -73,6 +73,7 @@
     <button class="btn btn-danger" type="button">Normal</button>
     <button class="btn btn-danger active" type="button">Ativo</button>
     <button class="btn btn-danger disabled" type="button">Desativo</button>
+    <button class="btn btn-danger" data-toggle="button" type="button">ati / des </button>
 
     <h3>Grupo de botoes - horizontal</h3>
     <div class="btn-group">
@@ -104,7 +105,7 @@
     <h3>Botoes dropdown</h3>
     <div class="dropdown">
         <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" type="button">Clique</button>
-        <div class="dropdown-menun">
+        <div class="dropdown-menu">
             <a href="#" class="dropdown-item">Link 1</a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">Link 2</a>
