Conteudos de JS

--- a/JavaScript/01 - Revisão/index.html
+++ b/JavaScript/01 - Revisão/index.html
@@ -3,7 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <title>JS</title>
+        <script>
+            //propriedade lenght
 
+            var nome = 'Andrey Marques mendonça';
+
+            //onde está o indece charAt()
+            document.write(nome.charAt(7))
+
+            /* 
+
+            indexOf() = primeira ocorrencia de uma letra
+            replace() = subtitui alfo por alfo
+            substr() = indica a posicao inicial e quantos caracter eu vou pegar a partir dele
+            trim() = remove espaço nas extremidades dos caracters
+            */
+
+            document.write(nome.indexOf('M'))
+            document.write(nome.replace('Marques', 'Silva'))
+            document.writ(nome.substr(2,10));
+        </script>
     </head>
     <body>
         <h1>Olá JavaScript</h1>
